@@ -1,4 +1,3 @@
-<<<<<<< .mine
 Package: openair
 Type: Package
 Title: Tools for the analysis of air pollution data
@@ -39,45 +38,3 @@ URL: http://www.openair-project.org/
 LazyLoad: yes
 LazyData: yes
 Packaged: 2010-01-18 09:56:13 UTC; trakr
-=======
-Package: openair
-Type: Package
-Title: Tools for the analysis of air pollution data
-Version: 1.0-1
-Date: 2014-06-26
-Authors@R: c(person("David", "Carslaw", role = c("aut", "cre"), email =
-    "david.carslaw@kcl.ac.uk"), person("Karl", "Ropkins", role =
-    "aut", email = "K.Ropkins@its.leeds.ac.uk"))
-ByteCompile: true
-Depends:
-    R (>= 2.15.1),
-Imports:
-    utils,
-    grid,
-    plyr,
-    reshape2,
-    mgcv,
-    lattice,
-    latticeExtra,
-    cluster,
-    RColorBrewer,
-    Rcpp
-Suggests:
-    hexbin,
-    RgoogleMaps,
-    png,
-    mapdata,
-    KernSmooth
-LinkingTo: Rcpp
-Maintainer: David Carslaw <david.carslaw@kcl.ac.uk>
-Description: Tools to analyse, interpret and understand air
-    pollution data. Data are typically hourly time series
-    and both monitoring data and dispersion model output
-    can be analysed.  Many functions can also be applied to
-    other data, including meteorological and traffic data.
-License: GPL (>= 2)
-URL: http://www.openair-project.org/
-LazyLoad: yes
-LazyData: yes
-Packaged: 2010-01-18 09:56:13 UTC; trakr
->>>>>>> .r869
