@@ -5,6 +5,7 @@ Changes in openair 1.1=0 [2014-06-27]
 *	Refine airbaseStats to include site type and city by default
 *	Make trendLevel colour scaling consistent with other functions
 	and allow missing data to be shown in different colour
+*	Allow categorical scales in trendLevel
 
 Changes in openair 1.0-0 [2014-06-09]
 =====================================
